kustomize/docspell/deployment-joex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joex
  namespace: docspell
  labels:
    app.kubernetes.io/component: joex-worker
    app.kubernetes.io/name: docspell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joex
  template:
    metadata:
      labels:
        app: joex
    spec:
      containers:
      - args:
        - -J-Xmx3G
        image: docspell/joex:latest
        name: joex
        ports:
        - containerPort: 7878
