kustomize/docspell/deployment-restserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restserver
  namespace: docspell
  labels:
    app.kubernetes.io/name: docspell
    app.kubernetes.io/instance: docspell
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/component: restserver
    app.kubernetes.io/part-of: docspell
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Docspell restserver deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restserver
  template:
    metadata:
      labels:
        app: restserver
        app.kubernetes.io/name: docspell
        app.kubernetes.io/instance: docspell
        app.kubernetes.io/component: restserver
    spec:
      containers:
      - env:
        - name: DOCSPELL_SERVER_INTERNAL__URL
          value: http://restserver:7880
        - name: DOCSPELL_SERVER_BACKEND_JDBC_URL
          value: jdbc:postgresql://postgres:5432/dbname
        - name: DOCSPELL_SERVER_BIND_ADDRESS
          value: 0.0.0.0
        - name: DOCSPELL_SERVER_FULL__TEXT__SEARCH_ENABLED
          value: "true"
        - name: DOCSPELL_SERVER_FULL__TEXT__SEARCH_SOLR_URL
          value: http://solr:8983/solr/docspell
        - name: DOCSPELL_SERVER_INTEGRATION__ENDPOINT_ENABLED
          value: "true"
        - name: DOCSPELL_SERVER_INTEGRATION__ENDPOINT_HTTP__HEADER_ENABLED
          value: "true"
        - name: DOCSPELL_SERVER_BACKEND_SIGNUP_MODE
          value: open
        - name: DOCSPELL_SERVER_BACKEND_ADDONS_ENABLED
          value: "false"
        image: docspell/restserver:latest
        name: restserver
        ports:
        - containerPort: 7880
