kustomize/docspell/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"restserver","namespace":"docspell"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"restserver"}},"template":{"metadata":{"labels":{"app":"restserver"}},"spec":{"containers":[{"env":[{"name":"DOCSPELL_SERVER_INTERNAL__URL","value":"http://restserver:7880"},{"name":"DOCSPELL_SERVER_BACKEND_JDBC_URL","value":"jdbc:postgresql://postgres:5432/dbname"},{"name":"DOCSPELL_SERVER_BIND_ADDRESS","value":"0.0.0. [...]
    creationTimestamp: "2023-08-11T15:14:47Z"
    generation: 2
    labels:
      app.kubernetes.io/component: restserver
      app.kubernetes.io/managed-by: dave
      app.kubernetes.io/name: docspell
      app.kubernetes.io/version: "1.0"
      k8slens-edit-resource-version: v1
    name: restserver
    namespace: docspell
    resourceVersion: "23812095"
    uid: 46884582-c40e-49e1-b9e4-1c6e48608f01
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: restserver
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: restserver
      spec:
        containers:
        - env:
          - name: DOCSPELL_SERVER_INTERNAL__URL
            value: http://restserver:7880
          - name: DOCSPELL_SERVER_BACKEND_JDBC_URL
            value: jdbc:postgresql://postgres:5432/dbname
          - name: DOCSPELL_SERVER_BIND_ADDRESS
            value: 0.0.0.0
          - name: DOCSPELL_SERVER_FULL__TEXT__SEARCH_ENABLED
            value: "true"
          - name: DOCSPELL_SERVER_FULL__TEXT__SEARCH_SOLR_URL
            value: http://solr:8983/solr/docspell
          - name: DOCSPELL_SERVER_INTEGRATION__ENDPOINT_ENABLED
            value: "true"
          - name: DOCSPELL_SERVER_INTEGRATION__ENDPOINT_HTTP__HEADER_ENABLED
            value: "true"
          - name: DOCSPELL_SERVER_BACKEND_SIGNUP_MODE
            value: open
          - name: DOCSPELL_SERVER_BACKEND_ADDONS_ENABLED
            value: "false"
          image: docspell/restserver:latest
          imagePullPolicy: Always
          name: restserver
          ports:
          - containerPort: 7880
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-12-15T01:11:52Z"
      lastUpdateTime: "2024-12-15T01:11:52Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-08-11T15:14:47Z"
      lastUpdateTime: "2025-01-29T11:15:11Z"
      message: ReplicaSet "restserver-5c566795" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"joex","namespace":"docspell"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"joex"}},"template":{"metadata":{"labels":{"app":"joex"}},"spec":{"containers":[{"args":["-J-Xmx3G"],"env":[{"name":"DOCSPELL_JOEX_APP__ID","value":"joex1"},{"name":"DOCSPELL_JOEX_PERIODIC__SCHEDULER_NAME","value":"joex1"},{"name":"DOCSPELL_JOEX_SCHEDULER_NAME","value":"joex1"},{"name":"DOCSPELL_JOEX_BASE__URL","value":"http: [...]
    creationTimestamp: "2023-08-11T15:14:47Z"
    generation: 3
    labels:
      app.kubernetes.io/component: joex-worker
      app.kubernetes.io/managed-by: dave
      app.kubernetes.io/name: docspell
      app.kubernetes.io/version: "1.0"
      k8slens-edit-resource-version: v1
    name: joex
    namespace: docspell
    resourceVersion: "23812160"
    uid: 5a335ad3-d779-4c4a-8ebd-8ef2d3375b32
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: joex
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: joex
      spec:
        containers:
        - args:
          - -J-Xmx3G
          image: docspell/joex:latest
          imagePullPolicy: Always
          name: joex
          ports:
          - containerPort: 7878
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-12-15T01:11:49Z"
      lastUpdateTime: "2024-12-15T01:11:49Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2023-08-11T15:14:47Z"
      lastUpdateTime: "2025-01-29T11:15:25Z"
      message: ReplicaSet "joex-65f697847f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
