kustomize/docspell/statefulset-solr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
  namespace: docspell
  labels:
    app.kubernetes.io/name: docspell
    app.kubernetes.io/instance: docspell
    app.kubernetes.io/version: "9"
    app.kubernetes.io/component: solr-worker
    app.kubernetes.io/part-of: docspell
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Docspell solr statefulset"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solr
  serviceName: solr
  template:
    metadata:
      labels:
        app: solr
        app.kubernetes.io/name: docspell
        app.kubernetes.io/instance: docspell
        app.kubernetes.io/component: solr-worker
    spec:
      containers:
      - command:
        - docker-entrypoint.sh
        - solr-precreate
        - docspell
        image: solr:9
        livenessProbe:
          httpGet:
            path: /solr/admin/info/system
            port: 8983
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 10
        name: solr
        ports:
        - containerPort: 8983
        readinessProbe:
          httpGet:
            path: /solr/admin/info/system
            port: 8983
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/solr
          name: solr-data
  volumeClaimTemplates:
  - metadata:
      name: solr-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
