kustomize/docspell/service-joex.yaml
apiVersion: v1
kind: Service
metadata:
  name: joex
  namespace: docspell
spec:
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  selector:
    app: joex
  type: ClusterIP
