kustomize/docspell/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: docspell
  labels:
    app.kubernetes.io/name: docspell
    app.kubernetes.io/instance: docspell
    app.kubernetes.io/version: "15.2"
    app.kubernetes.io/component: postgres-service
    app.kubernetes.io/part-of: docspell
    app.kubernetes.io/managed-by: flux
  annotations:
    description: "Docspell postgres service"
spec:
  clusterIP: None
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: postgres
  selector:
    app: postgres
    app.kubernetes.io/name: docspell
    app.kubernetes.io/instance: docspell
    app.kubernetes.io/component: postgres
  type: ClusterIP
