kustomize/docspell/service-solr.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: docspell
spec:
  ports:
  - name: solr
    port: 8983
    protocol: TCP
    targetPort: 8983
  selector:
    app: solr
  type: ClusterIP
